MENU HOVER TERMINADO

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
     width: 100%; 
 }
 
-/* Botón hamburguesa */
 .navbar-toggler {
     margin-right: 1rem;
 }
@@ -31,8 +30,8 @@ body {
 }
 
 /* Hover*/
-.hoverable {
-    transition: background-color 0.3s ease;
+.navbarNav {
+    transition: background-img url(img/FOTO_HOVER.jpg);
 }
 
 
@@ -40,3 +39,7 @@ body {
 header p {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
+
+
+/*prueba hover*/
+    
