--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,11 @@ body {
 header p {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
+
+
+/* Nuestra historia */
+h2.text-white {
+    text-align: center;
+    margin: 40px 0px 16px;
+}
+
