--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 /* botón hamburguesa  derecha */
 .navbar {
     position: absolute;
-    top: 0;
+    top: 0;wd
     right: 0;
     width: 100%; 
 }
