--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 /* botón hamburguesa  derecha */
 .navbar {
     position: absolute;
-    top: 0;wd
+    top: 0;
     right: 0;
     width: 100%; 
 }
@@ -29,10 +29,6 @@ body {
     flex-wrap: nowrap; 
 }
 
-/* Hover*/
-.navbarNav {
-    transition: background-img url(img/FOTO_HOVER.jpg);
-}
 
 
 /* Header centrado */
