--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,9 @@ header p {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
+.scroll1{
+    margin-top: 2rem;
+    margin: 0 auto;
+    width: 20%;
+
+}
