UNION CODIGOS DE NOSOTRAS DOS
Hemos tenido porbemas utilizando github y hemos unido aqui el trabajo anterior de las dos

--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,9 @@ h2.text-white {
     margin-top: 0; 
     margin-bottom: 10px; 
 }
+
+.scroll1{
+    margin-top: 2rem;
+    margin: 0 auto;
+    width: 20%;
+}
