--- a/styles.css
+++ b/styles.css
@@ -99,4 +99,19 @@ h2.text-white {
 
 .texto-negrita{
     font-weight: bold;
+    z-index: 2;
+}
+
+/* Wave effect */
+.d-flex.flex-column.justify-content-center.align-items-center.vh-100.position-relative {
+    background-color: #3c4f99;
+    overflow: hidden; 
+    position: relative;
+}
+
+.wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
