--- a/nuevapagina.css
+++ b/nuevapagina.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: #9eccd9;
+    background-color: #242a51;
+    font-family: 'Afacad Flux', sans-serif; /* Aplica la fuente al cuerpo */
 }
 
 .carousel-item .col {
@@ -16,3 +17,73 @@ body {
     border-radius: 50%;
     object-fit: cover;
 }
+
+/* Flechas carrousel */
+
+.mb-4 {
+    color: #d3e4f5;
+    
+}
+
+.fs-1 {
+    font-size: 10px;
+}
+.text-muted {
+    --bs-text-opacity: 1;
+    color: #d3e4f5 !important;
+}
+.card-body{
+    color: #d3e4f5 !important;
+}
+
+.btn-primary {
+    background:transparent;
+    border-color: #d3e4f5;
+    --bs-btn-hover-bg:#3c4f99!important;
+    --bs-btn-hover-border-color:none;
+    --bs-btn-active-bg:#d3e4f5;
+
+}
+
+.--bs-btn-hover-bg {
+background-color: black!important;
+}
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            background-color: #d3e4f5; /* Cambia 'red' por el color que desees */
+            border-radius: 50%; /* Opcional: Añadir bordes redondeados */
+            color: #242a51 !important;
+        }
+
+        /* Asegurarte de que el tamaño de las flechas sea el correcto */
+        .carousel-control-prev,
+        .carousel-control-next {
+            width: 10%; /* Ajusta el ancho de los botones si es necesario */
+        }
+   
+
+   /* Estilos generales */
+.footer-link {
+    color: #88ccff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  /* Animación al pasar el ratón */
+  .footer-link:hover {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #200678;
+  }
+/* color de iconos navbar */
+  .fa-cart-shopping:before, .fa-shopping-cart:before {
+    content: "\f07a";
+    color: #d3e4f5;
+    margin: 20px 20px 20px;
+}
+.fa-user:before {
+    content: "\f007";
+    color: #d3e4f5;
+}
+
+
