--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 body {
-   
+
     height: 100vh;
     margin: 0;
     font-family: 'Afacad Flux', sans-serif;
     color: #d3e4f5;
+    padding: 0;
+    overflow-x: hidden; /* Previene desplazamiento horizontal */
     
+    
+
 }
 
-.h2, h2 {
+.h2,
+h2 {
     font-size: 2rem;
     margin: 400px 0px 16px;
 }
@@ -18,11 +23,11 @@ h2.text-white {
 
 /* LOGO DEIA */
 .text-logo {
-    margin-top: 0; 
-    margin-bottom: 10px; 
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
-.scroll1{
+.scroll1 {
     margin-top: 2rem;
     margin: 0 auto;
     width: 20%;
@@ -34,8 +39,8 @@ h2.text-white {
 }
 
 
-.hover-link:hover ~ .custom-header {
-    background-image: url('img/FONDO1.jpg'); 
+.hover-link:hover~.custom-header {
+    background-image: url('img/FONDO1.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -45,26 +50,29 @@ h2.text-white {
 
 .custom-header {
     background-image: none;
-  }
-  
-  .menu-content {
+}
+
+.menu-content {
     background-color: transparent !important;
     margin-top: 60px;
-  }
-  
-  /* Color de texto personalizado y tamaño de fuente */
-  .text-custom {
-    color: #87CEEB; /* Azul claro */
-    font-size: 1.2rem; /* Tamaño de fuente personalizado */
-  }
-  
-  /* Estilo de hover para el botón "Crea tu Bikini" */
-  .btn-hover:hover {
-    color: #fff; /* Color del texto al hacer hover */
-  }
-  
+}
 
- /* FIN MENU  */
+/* Color de texto personalizado y tamaño de fuente */
+.text-custom {
+    color: #87CEEB;
+    /* Azul claro */
+    font-size: 1.2rem;
+    /* Tamaño de fuente personalizado */
+}
+
+/* Estilo de hover para el botón "Crea tu Bikini" */
+.btn-hover:hover {
+    color: #fff;
+    /* Color del texto al hacer hover */
+}
+
+
+/* FIN MENU  */
 
 
 
@@ -89,7 +97,8 @@ a {
     color: #fff;
     font-size: 16px;
     display: block;
-    padding: 15px; /* Espaciado para los enlaces */
+    padding: 15px;
+    /* Espaciado para los enlaces */
     text-transform: uppercase;
     transition: font-weight 0.3s;
 }
@@ -100,60 +109,65 @@ a:hover {
 
 /* Header ocupa todo el viewport */
 .custom-header {
-    height: 100vh; 
-    width: 100%; 
-    background-size: cover; 
+    height: auto;
+    width: 100%;
+    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; 
-    transition: background-image 0.5s ease; 
+    background-repeat: no-repeat;
+    transition: background-image 0.5s ease;
 }
 
 
 .navbar-toggler {
     margin-left: 0 !important;
-  }
-  
+}
+
 
 
 /* Hoverable */
 .hoverable {
-    min-height: 50vh; 
+    min-height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
 }
 
+
+
+
 /* video de fondo */
 .video-bg {
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 100%; 
-    min-height: 100%; 
-    width: auto;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
     height: auto;
-    transform: translate(-50%, -50%);
-    z-index: -1; 
-    object-fit: cover; 
+    transform: translate(-50%, 0%);
+    z-index: -1;
+    object-fit: cover;
 }
 
 .overlay-text {
     position: absolute;
-    top: 50%; 
-    left: 1%; 
+    top: 50%;
+    left: 1%;
     transform: translateY(-50%);
     color: #d3e4f5 !important;
     font-size: 4.5rem;
     font-weight: bold;
     /* text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7); */
     z-index: 2;
-    
+
 }
 
 .texto-colaboracion {
-    color: #d3e4f5; /* Cambia este color al que prefieras */
-    font-size: 3.5rem; /* Tamaño de texto más pequeño */
+    color: #d3e4f5;
+    /* Cambia este color al que prefieras */
+    font-size: 3.5rem;
+    /* Tamaño de texto más pequeño */
     text-align: right;
 }
 
@@ -165,7 +179,7 @@ a:hover {
     background-color: #113558 !important;
 }
 
-.texto-negrita{
+.texto-negrita {
     font-weight: bold;
     z-index: 2;
 }
@@ -174,7 +188,8 @@ a:hover {
 /* estilos primer texto deia  */
 
 .custom-height {
-    min-height: 80vh; /* Ajusta según necesites */
+    min-height: 80vh;
+    /* Ajusta según necesites */
 }
 
 /* Ajusta el tamaño del texto en dispositivos grandes */
@@ -183,11 +198,12 @@ a:hover {
 }
 
 
-@media (max-width: 576px) { 
+@media (max-width: 576px) {
     .texto-colaboracion {
-        font-size: 5vw; 
+        font-size: 5vw;
         text-align: center;
     }
+
     .col-md-6:first-child {
         display: flex;
         align-items: center;
@@ -201,21 +217,22 @@ a:hover {
 
 
 .icono-metric {
-    max-width: 80px; /* Ajustar el tamaño de los iconos */
+    max-width: 80px;
+    /* Ajustar el tamaño de los iconos */
 }
 
 /* Fondo azul marino */
 .bg-dark-blue {
     background-color: #001f3f;
-  }
-  
+}
+
 
 
 
 
 /* TIRA DE COLABROADORES 
  */
- .marquee {
+.marquee {
     overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
@@ -223,35 +240,49 @@ a:hover {
 
 .marquee-content {
     display: inline-block;
-    animation: marquee 10s linear infinite; /* Ajustar la velocidad aquí */
+    animation: marquee 10s linear infinite;
+    /* Ajustar la velocidad aquí */
 }
 
 .marquee-item {
     display: inline-block;
-    padding: 0 15px; /* Espaciado entre logos */
+    padding: 0 15px;
+    /* Espaciado entre logos */
 }
 
 .theme-img {
-    max-height: 40px; /* Ajustar el tamaño de las imágenes */
+    max-height: 40px;
+    /* Ajustar el tamaño de las imágenes */
     vertical-align: middle;
 }
 
 @keyframes marquee {
-    0% { transform: translateX(0); } /* Comienza desde el 0% */
-    100% { transform: translateX(-50%); } /* Mueve hasta el 50% para el efecto continuo */
+    0% {
+        transform: translateX(0);
+    }
+
+    /* Comienza desde el 0% */
+    100% {
+        transform: translateX(-50%);
+    }
+
+    /* Mueve hasta el 50% para el efecto continuo */
 }
 
 
 /* CSS GALERIA  */
 
 .position-relative {
-    overflow: hidden; /* Para que la superposición no se salga del contenedor */
+    overflow: hidden;
+    /* Para que la superposición no se salga del contenedor */
 }
 
 .gallery-img {
     width: 100%;
-    height: auto; /* Mantiene la proporción de la imagen */
-    transition: transform 0.3s; /* Transición suave al hacer hover */
+    height: auto;
+    /* Mantiene la proporción de la imagen */
+    transition: transform 0.3s;
+    /* Transición suave al hacer hover */
 }
 
 .overlay {
@@ -260,37 +291,49 @@ a:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo negro semitransparente */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Fondo negro semitransparente */
     color: white;
     display: flex;
-    align-items: center; /* Centrar verticalmente */
-    justify-content: center; /* Centrar horizontalmente */
-    opacity: 0; /* Comienza oculto */
-    transition: opacity 0.3s; /* Transición suave de la opacidad */
+    align-items: center;
+    /* Centrar verticalmente */
+    justify-content: center;
+    /* Centrar horizontalmente */
+    opacity: 0;
+    /* Comienza oculto */
+    transition: opacity 0.3s;
+    /* Transición suave de la opacidad */
 }
 
 .position-relative:hover .overlay {
-    opacity: 1; /* Muestra la superposición al hacer hover */
+    opacity: 1;
+    /* Muestra la superposición al hacer hover */
 }
 
 .position-relative:hover .gallery-img {
-    transform: scale(1.05); /* Escala la imagen un poco al hacer hover */
+    transform: scale(1.05);
+    /* Escala la imagen un poco al hacer hover */
 }
 
 .text {
-    font-size: 1.2em; /* Ajusta el tamaño del texto */
-    text-align: center; /* Centra el texto */
+    font-size: 1.2em;
+    /* Ajusta el tamaño del texto */
+    text-align: center;
+    /* Centra el texto */
 }
 
 
 .position-relative {
-    overflow: hidden; /* Para que la superposición no se salga del contenedor */
+    overflow: hidden;
+    /* Para que la superposición no se salga del contenedor */
 }
 
 .gallery-img {
     width: 100%;
-    height: auto; /* Mantiene la proporción de la imagen */
-    transition: transform 0.3s; /* Transición suave al hacer hover */
+    height: auto;
+    /* Mantiene la proporción de la imagen */
+    transition: transform 0.3s;
+    /* Transición suave al hacer hover */
 }
 
 .overlay {
@@ -299,46 +342,66 @@ a:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo negro semitransparente */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Fondo negro semitransparente */
     color: white;
     display: flex;
-    align-items: center; /* Centrar verticalmente */
-    justify-content: center; /* Centrar horizontalmente */
-    opacity: 0; /* Comienza oculto */
-    transition: opacity 0.3s; /* Transición suave de la opacidad */
+    align-items: center;
+    /* Centrar verticalmente */
+    justify-content: center;
+    /* Centrar horizontalmente */
+    opacity: 0;
+    /* Comienza oculto */
+    transition: opacity 0.3s;
+    /* Transición suave de la opacidad */
 }
 
 .carousel-item:hover .overlay {
-    opacity: 1; /* Muestra la superposición al hacer hover */
+    opacity: 1;
+    /* Muestra la superposición al hacer hover */
 }
 
 .carousel-item:hover .gallery-img {
-    transform: scale(1.05); /* Escala la imagen un poco al hacer hover */
+    transform: scale(1.05);
+    /* Escala la imagen un poco al hacer hover */
 }
 
 .text {
-    font-size: 1.2em; /* Ajusta el tamaño del texto */
-    text-align: center; /* Centra el texto */
+    font-size: 1.2em;
+    /* Ajusta el tamaño del texto */
+    text-align: center;
+    /* Centra el texto */
 }
 
 /* FOOTER  */
 
 
 
-   /* Estilos generales */
+/* Estilos generales */
 .footer-link {
     color: #88ccff;
     cursor: pointer;
     transition: all 0.3s ease;
-  }
-  
-  /* Animación al pasar el ratón */
-  .footer-link:hover {
+}
+
+/* Animación al pasar el ratón */
+.footer-link:hover {
     font-weight: bold;
     font-size: 1.1em;
     color: #200678;
-  }
-  
+}
 
-  
+
+@media (min-width: 576px) {
+    .video-bg {
+        transform: translate(-50%, -50%);
+    }
+}
+
+
+@media (min-width: 992px) {
+    .custom-header  {
+        height: 100vh;
+    }
+}
 
