--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: 'Afacad Flux', sans-serif;
-    color: #d3e4f5;
-    padding: 0;
-    overflow-x: hidden; /* Previene desplazamiento horizontal */
-    
+    color: #d3e4f5;    
     
 
 }
@@ -109,7 +106,7 @@ a:hover {
 
 /* Header ocupa todo el viewport */
 .custom-header {
-    height: auto;
+    height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -396,13 +393,12 @@ a:hover {
     .video-bg {
         transform: translate(-50%, -50%);
     }
-}
-
-
-@media (min-width: 992px) {
-    .custom-header  {
-        height: 100vh;
+    .menu-tribute {
+        margin-top: 0;
     }
 }
 
 
+.menu-tribute {
+    margin-top: 0;
+}
