--- a/nuevapagina.css
+++ b/nuevapagina.css
@@ -16,7 +16,7 @@ body {
 
 
 
-/* Flechas carrousel */
+/* FLECHAS CARRUSSEL */
 
 .mb-4 {
     color: #d3e4f5;
@@ -37,7 +37,8 @@ body {
 }
 
 
-/* nueva galeria */
+/* GALERIA */
+
 .card-img-top {
     object-fit: cover;
 }
@@ -77,21 +78,19 @@ body {
 }
 
 
-/* Estilos generales */
+
 .footer-link {
     color: #88ccff;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
-/* Animación al pasar el ratón */
 .footer-link:hover {
     font-weight: bold;
     font-size: 1.1em;
     color: #200678;
 }
 
-/* color de icono ir hacia atras */
 .me-3 {
     margin-right: 1rem !important;
     color: beige;
@@ -99,7 +98,7 @@ body {
 
 
 
-/* Menu texto */
+/* TEXTO MENU */
 
 
 .menu-content {
@@ -145,7 +144,6 @@ body {
 }
 
 
-/* Esconde la barra de búsqueda inicialmente */
 #searchInput {
     transition: width 0.3s ease;
 }
@@ -165,7 +163,7 @@ body {
 
 
 
-/* tEXTO ANIMADO H1 CODEPEN */
+/* tEXTO ANIMADO H1 */
 
 
 @keyframes background {
@@ -188,14 +186,13 @@ h1 {
 
 
 
-/* Adaptar iconos en vista móvil */
+/* TAMAÑOS  */
 @media (max-width: 768px) {
     .navbar .btn {
         padding: 0.5rem;
         font-size: 1.2rem;
     }
 
-    /* Barra de búsqueda se muestra completa en vista móvil */
     #searchInput {
         width: 100%;
     }
@@ -214,7 +211,6 @@ h1 {
     z-index: 1030;
 }
 
-/* Estilo personalizado del modal */
 
 .custom-modal {
     background-color: #e0f0ff;
@@ -224,15 +220,12 @@ h1 {
 
 .modal-body {
     color: #2e50a0;
-    /* Color de texto azul oscuro */
 }
 
-/* Ícono de check centrado */
 .check-icon svg {
     color: #2e50a0;
 }
 
-/* Título en el modal */
 .modal-title {
     font-size: 1.5rem;
     font-weight: bold;
@@ -240,13 +233,11 @@ h1 {
     margin-top: 3px;
 }
 
-/* Texto debajo del título */
 .modal-body p {
     font-size: 1rem;
     color: #2e50a0;
 }
 
-/* Pequeño (sm) */
 @media (min-width: 576px) {
     .header-top {
         position: fixed;
@@ -260,7 +251,6 @@ h1 {
     border-color: #007bff;
 }
 
-/* Botón de cerrar */
 .custom-close-btn {
     background-color: #2e50a0!important;
     border: none;
@@ -288,7 +278,6 @@ h1 {
     background-color: #243f7b;
 }
 
-/* Quita borde del header */
 .modal-header {
     border: none;
 }
@@ -311,7 +300,6 @@ h1 {
     transition: all 0.3s ease;
 }
 
-/* Animación al pasar el ratón */
 .footer-link:hover {
     font-weight: bold;
     font-size: 1.1em;
