--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ h2.text-white {
     background-position: center;
 }
 
-/* STYLES MENU hamburguesa */
+/* STYLES MENU HAMB */
 
 
 .custom-header {
@@ -54,18 +54,13 @@ h2.text-white {
     margin-top: 60px;
 }
 
-/* Color de texto personalizado y tamaño de fuente */
 .text-custom {
     color: #87CEEB;
-    /* Azul claro */
     font-size: 1.2rem;
-    /* Tamaño de fuente personalizado */
 }
 
-/* Estilo de hover para el botón "Crea tu Bikini" */
 .btn-hover:hover {
     color: #fff;
-    /* Color del texto al hacer hover */
 }
 
 
@@ -73,10 +68,9 @@ h2.text-white {
 
 
 
-/* FIN STYLES HOVER  */
 
 
-/* Estilo personalizado del modal */
+/*MODAL */
 .btn {
     background-color: #3c4f99;
     color: #e9ecef !important;
@@ -98,20 +92,16 @@ h2.text-white {
 .btn-secondary {
     border: none;
     color: #000000;
-    /* font-size: 1.5rem; */
 }
 
 .modal-body {
     color: #2e50a0;
-    /* Color de texto azul oscuro */
 }
 
-/* Ícono de check centrado */
 .check-icon svg {
     color: #2e50a0;
 }
 
-/* Título en el modal */
 .modal-title {
     font-size: 1.5rem;
     font-weight: bold;
@@ -119,22 +109,19 @@ h2.text-white {
     margin-top: 3px;
 }
 
-/* Texto debajo del título */
 .modal-body p {
     font-size: 1rem;
     color: #2e50a0;
 }
 
-/* Personaliza el ícono del botón de cierre */
 .btn-secondary{
-    border: none; /* Elimina bordes */
+    border: none; 
     color: #000000; 
     font-size: 1.5rem; 
 }
 
-/* Cambia el color al hacer hover */
 .btn-close:hover {
-    color: #000000; /* Cambia el color cuando se pasa el cursor */
+    color: #000000; 
 }
 
 ul {
@@ -153,7 +140,6 @@ a {
     font-size: 16px;
     display: block;
     padding: 15px;
-    /* Espaciado para los enlaces */
     text-transform: uppercase;
     transition: font-weight 0.3s;
 }
@@ -162,7 +148,6 @@ a:hover {
     font-weight: bold;
 }
 
-/* Header ocupa todo el viewport */
 .custom-header {
     height: 100vh;
     width: 100%;
@@ -179,7 +164,6 @@ a:hover {
 
 
 
-/* Hoverable */
 .hoverable {
     min-height: 50vh;
     display: flex;
@@ -191,7 +175,7 @@ a:hover {
 
 
 
-/* video de fondo */
+/* VIDEO */
 .video-bg {
     position: absolute;
     top: 50%;
@@ -213,16 +197,13 @@ a:hover {
     color: #d3e4f5 !important;
     font-size: 4.5rem;
     font-weight: bold;
-    /* text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7); */
     z-index: 2;
 
 }
 
 .texto-colaboracion {
     color: #d3e4f5;
-    /* Cambia este color al que prefieras */
     font-size: 3.5rem;
-    /* Tamaño de texto más pequeño */
     text-align: right;
 }
 
@@ -241,14 +222,12 @@ a:hover {
 
 
 
-/* estilos primer texto deia  */
+/* 1 TEXTO DEIA  */
 
 .custom-height {
     min-height: 80vh;
-    /* Ajusta según necesites */
 }
 
-/* Ajusta el tamaño del texto en dispositivos grandes */
 .texto-colaboracion {
     font-size: 2vw;
 }
@@ -281,10 +260,8 @@ a:hover {
 
 .icono-metric {
     max-width: 80px;
-    /* Ajustar el tamaño de los iconos */
 }
 
-/* Fondo azul marino */
 .bg-dark-blue {
     background-color: #001f3f;
 }
@@ -293,8 +270,8 @@ a:hover {
 
 
 
-/* TIRA DE COLABROADORES 
- */
+/* TIRA DE COLABROADORES */
+
 .marquee {
     overflow: hidden;
     white-space: nowrap;
@@ -304,18 +281,15 @@ a:hover {
 .marquee-content {
     display: inline-block;
     animation: marquee 10s linear infinite;
-    /* Ajustar la velocidad aquí */
 }
 
 .marquee-item {
     display: inline-block;
     padding: 0 15px;
-    /* Espaciado entre logos */
 }
 
 .theme-img {
     max-height: 40px;
-    /* Ajustar el tamaño de las imágenes */
     vertical-align: middle;
 }
 
@@ -324,12 +298,9 @@ a:hover {
         transform: translateX(0);
     }
 
-    /* Comienza desde el 0% */
     100% {
         transform: translateX(-50%);
     }
-
-    /* Mueve hasta el 50% para el efecto continuo */
 }
 
 
@@ -337,15 +308,12 @@ a:hover {
 
 .position-relative {
     overflow: hidden;
-    /* Para que la superposición no se salga del contenedor */
 }
 
 .gallery-img {
     width: 100%;
     height: auto;
-    /* Mantiene la proporción de la imagen */
     transition: transform 0.3s;
-    /* Transición suave al hacer hover */
 }
 
 .overlay {
@@ -355,48 +323,36 @@ a:hover {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
-    /* Fondo negro semitransparente */
     color: white;
     display: flex;
     align-items: center;
-    /* Centrar verticalmente */
     justify-content: center;
-    /* Centrar horizontalmente */
     opacity: 0;
-    /* Comienza oculto */
     transition: opacity 0.3s;
-    /* Transición suave de la opacidad */
 }
 
 .position-relative:hover .overlay {
     opacity: 1;
-    /* Muestra la superposición al hacer hover */
 }
 
 .position-relative:hover .gallery-img {
     transform: scale(1.05);
-    /* Escala la imagen un poco al hacer hover */
 }
 
 .text {
     font-size: 1.2em;
-    /* Ajusta el tamaño del texto */
     text-align: center;
-    /* Centra el texto */
 }
 
 
 .position-relative {
     overflow: hidden;
-    /* Para que la superposición no se salga del contenedor */
 }
 
 .gallery-img {
     width: 100%;
     height: auto;
-    /* Mantiene la proporción de la imagen */
     transition: transform 0.3s;
-    /* Transición suave al hacer hover */
 }
 
 .overlay {
@@ -406,48 +362,36 @@ a:hover {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
-    /* Fondo negro semitransparente */
     color: white;
     display: flex;
     align-items: center;
-    /* Centrar verticalmente */
     justify-content: center;
-    /* Centrar horizontalmente */
     opacity: 0;
-    /* Comienza oculto */
     transition: opacity 0.3s;
-    /* Transición suave de la opacidad */
 }
 
 .carousel-item:hover .overlay {
     opacity: 1;
-    /* Muestra la superposición al hacer hover */
 }
 
 .carousel-item:hover .gallery-img {
     transform: scale(1.05);
-    /* Escala la imagen un poco al hacer hover */
 }
 
 .text {
     font-size: 1.2em;
-    /* Ajusta el tamaño del texto */
     text-align: center;
-    /* Centra el texto */
 }
 
 /* FOOTER  */
 
 
-
-/* Estilos generales */
 .footer-link {
     color: #88ccff;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
-/* Animación al pasar el ratón */
 .footer-link:hover {
     font-weight: bold;
     font-size: 1.1em;
